crates/pulsus-traceql/tests/corpus/accept/intrinsic_trace_duration.traceql
{ trace:duration > 1s }
