crates/pulsus-traceql/tests/corpus/reject/duration_compound.traceql
{ duration > 1h30m }
